<resources>
    <string name="app_name">Secrets</string>
    <string name="facebook_app_id">975867379249001</string>
    <string name="fb_login_protocol_scheme">fb975867379249001</string>
    <string name="menu_account">My account</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Log out</string>
    <string name="menu_register">Register</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_theme">Themes</string>
    <string name="menu_favorites">Favorites</string>
    <string name="action_settings">Settings</string>
    <string name="share_title">What do you want to share?</string>
    <string name="title_option">Do you want a title?</string>
    <string name="empty_string"> </string>
    <string name="choose_theme">choose theme</string>
    <string name="read_secrets">come, read some secrets</string>
    <string name="sort_by">Sort by:</string>
    <string name="commented_on">Commented on: %s</string>
    <string name="back_button"> &lt;&lt; Back</string>
    <string name="next_button">Next &gt;&gt;</string>
    <string name="go_up">Go up</string>
    <string name="delete_comment_title">Delete a comment</string>
    <string name="delete_comment_body">Are you sure you want to delete this comment?</string>
    <string name="save_theme_title">Choose a theme</string>
    <string name="save_theme_body">Are you sure you want to save your theme choice? </string>
    <string name="top_ten_list">top ten list</string>
    <string name="secrets_list">secrets list</string>
    <string name="thoughts_list">thoughts list</string>
    <string name="save_item">Save</string>
    <string name="secrets">secrets</string>
    <string name="thoughts">thoughts</string>
    <string name="select_all">Select all</string>
    <string name="clear">clear</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="not_now">Not now</string>
    <string name="insert_item_title">save message</string>
    <string name="insert_thought_body">Are you sure you want to share this thought?</string>
    <string name="insert_secret_body">Are you sure you want to share this secret?</string>
    <string name="add_account_register_title">create an account</string>
    <string name="add_account_login_title">Login with Facebook or Google</string>
    <string name="register_body">Do you want to register? It won\'t take more than a few seconds.\n If you registered already please sign in.</string>
    <string name="register_title">Hello stranger</string>
    <string name="private_account">Private</string>
    <string name="public_account">Public</string>
    <string name="create_account_remark">Login with facebook or google to prevent Cyberbullying.\nOnly nickname will be visible to others </string>
    <string name="account_nickname_name">Nickname</string>
    <string name="account_title">Hello %s</string>
    <string name="account_logout">Logout</string>
    <string name="account_secrets">Secrets</string>
    <string name="account_comments">Comments</string>
    <string name="account_votes">Votes</string>
    <string name="loading_user_data">Loading user\'s data</string>
    <string name="loading_secrets_data">Loading more secrets</string>
    <string name="loading_tag_data">Loading secrets for \'%s\'</string>
    <string name="loading_comments">Loading comments</string>
    <string name="show_comments_trailer_txt">No more comments</string>
    <string name="secrets_filter_layout">Secrets filter</string>
    <string name="tags_filter_layout">Tags filter</string>
    <string name="favorites_0_secrets">You have 0 pinned secrets</string>
</resources>
