<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/account"
        android:title="@string/menu_account"
        app:showAsAction="never"/>
    <item
        android:id="@+id/login"
        android:title="@string/menu_login"
        app:showAsAction="never"/>
    <item
        android:id="@+id/register"
        android:title="@string/menu_register"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/menu_settings"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/favorites"
        android:title="@string/menu_favorites"
        app:showAsAction="collapseActionView"/>
    <item
        android:id="@+id/theme"
        android:title="@string/menu_theme"
        app:showAsAction="never"/>

</menu>
